cmake_minimum_required(VERSION 3.5)

project(fibonacci)

set(CMAKE_CXX_STANDARD 11)

add_executable(calculating_pi calculating_pi.cc)
add_executable(fib1 fib1.cc)
add_executable(fib2 fib2.cc)
add_executable(fib3 fib3.cc)
add_executable(fib5 fib5.cc)
add_executable(hanoi hanoi.cc)
add_executable(trivial_compression trivial_compression.cc)
add_executable(unbreakable_encryption unbreakable_encryption.cc)