cmake_minimum_required(VERSION 3.5)

project(chapter1)

set(CMAKE_CXX_STANDARD 11)

add_executable(fib1 fib1.cpp)
add_executable(fib2 fib2.cpp)
add_executable(fib3 fib3.cpp)
add_executable(fib5 fib5.cpp)
add_executable(trivial_compression trivial_compression.cpp)
add_executable(unbreakable_encryption unbreakable_encryption.cpp)
add_executable(calculating_pi calculating_pi.cpp)
add_executable(hanoi hanoi.cpp)
